finish layouts and routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,11 @@
-<% provide(:title, 'Home') %>
-<h1>TWEETER</h1>
-<p>
-  This is the home page for the Tweeter App.
-</p>
+<div class="center hero-unit">
+  <h1>TWEETER</h1>
+
+  <h2>
+    This is the home page for the
+    <a href="http://tweeter.com/">TWEETER</a>
+    App!!!
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
