--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,9 @@
       <%= yield %>
       <%= render 'layouts/footer' %>
     </div>
+       <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
   </body>
+
+
 </html>
