--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,8 @@
       <%= link_to "TWEETER", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Home",    root_path %></li>
-          <li><%= link_to "Help",    help_path %></li>
+          <li><%#= link_to "Home",    root_path %></li>
+          <li><%#= link_to "Help",    help_path %></li>
           <li><%= link_to "Sign in", new_member_session_path %></li>
         </ul>
       </nav>
